--- a/Areas/AdminHotels/Views/Reviews/Create.cshtml
+++ b/Areas/AdminHotels/Views/Reviews/Create.cshtml
@@ -40,7 +40,7 @@
 
             <div class="form-group">
                 <label asp-for="ReviewDate" class="control-label">Ngày Đánh Giá</label>
-                <input asp-for="ReviewDate" class="form-control" />
+                <input asp-for="ReviewDate" type="date" class="form-control" />
                 <span asp-validation-for="ReviewDate" class="text-danger"></span>
             </div>
 
