--- a/Areas/AdminHotels/Views/Rooms/Create.cshtml
+++ b/Areas/AdminHotels/Views/Rooms/Create.cshtml
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label" style="color: #197fca;"></label>
-                <input asp-for="Status" class="form-control" />
+                <input asp-for="Status" value="Available" class="form-control" readonly/>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
