--- a/Areas/AdminHotels/Views/Rooms/Edit.cshtml
+++ b/Areas/AdminHotels/Views/Rooms/Edit.cshtml
@@ -41,9 +41,14 @@
 
             <div class="form-group">
                 <label asp-for="Status" class="control-label">Tình Trạng</label>
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" class="form-control">
+                    <option value="Available">Có sẵn</option>
+                    <option value="Booked">Đã đặt</option>
+                    <option value="Maintenance">Bảo trì</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
+
 
             <div class="form-group">
                 <input type="submit" value="Lưu" class="btn btn-primary" />
