--- a/Areas/AdminHotels/Views/Shared/_SideBar.cshtml
+++ b/Areas/AdminHotels/Views/Shared/_SideBar.cshtml
@@ -2,7 +2,7 @@
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 <aside class="main-sidebar sidebar-custom elevation-4 position-fixed">
     <!-- Brand Logo -->
-    <a href="/adminmanagement/dashboard" class="brand-link" style="background-color: #ed3d34; color: white;">
+    <a href="/adminhotels/dashboard" class="brand-link" style="background-color: #ed3d34; color: white;">
         <img src="~/images/Logo.png" alt="Logo Hunre" width="75px">
         <span class="brand-text font-weight-light ms-2">Quản lý</span>
     </a>
@@ -23,7 +23,7 @@
                     }
                     else
                     {
-                        <a href="#" class="d-block">DamQuocDan</a>
+                        <a href="#" class="d-block">Nguyễn Tùng Dương</a>
                     }
                 }
             </div>
@@ -224,7 +224,7 @@
                     </ul>
                 </li>
 
-                <li class="nav-item">
+@*                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <div class="d-flex align-items-center">
                             <div class="d-flex justify-content-center" style="width: 30px">
@@ -250,9 +250,9 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> *@
 
-                <li class="nav-item">
+@*                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <div class="d-flex align-items-center">
                             <div class="d-flex justify-content-center" style="width: 30px">
@@ -278,7 +278,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> *@
 
             </ul>
         </nav>
