--- a/Views/Customers/Create.cshtml
+++ b/Views/Customers/Create.cshtml
@@ -53,7 +53,7 @@
             <div class="form-group row">
                 <label asp-for="DateOfBirth" class="col-md-3 control-label">Ngày Sinh</label>
                 <div class="col-md-9">
-                    <input asp-for="DateOfBirth" class="form-control custom-input" placeholder="Nhập Ngày Sinh (dd/mm/yyyy)" />
+                    <input asp-for="DateOfBirth" type="date" class="form-control custom-input" placeholder="Nhập Ngày Sinh (dd/mm/yyyy)" />
                     <span asp-validation-for="DateOfBirth" class="text-danger"></span>
                 </div>
             </div>
