--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                                 <a class="nav-link" asp-controller="Bookings" asp-action="Index" asp-route-customerId="@Context.Session.GetInt32("CustomerId")">Phòng đã đặt</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Customers" asp-action="Details" asp-route-customerId="@Context.Session.GetInt32("CustomerId")">Thông tin cá nhân</a>
+                                <a class="nav-link" asp-controller="Customers" asp-action="Details" asp-route-id="@Context.Session.GetInt32("CustomerId")">Thông tin cá nhân</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="@Url.Action("Logout", "LoginC")">Đăng xuất</a>
